--- a/amazon_clone/src/Components/Header/Header.css
+++ b/amazon_clone/src/Components/Header/Header.css
@@ -1,9 +1,70 @@
 .header {
   background-color: #121921;
+  display: flex;
+  align-items: center;
+  position: sticky;
+  top: 0;
+  z-index: 100;
 }
 
 .header__logo {
   width: 100px;
+  object-fit: contain;
   margin: 18px 20px 0px;
   cursor: pointer;
+}
+
+.header__search {
+  display: flex;
+  flex: 1;
+}
+
+.header__searchInput {
+  height: 12px;
+  padding: 10px;
+  border: none;
+  width: 100%;
+  outline: none;
+}
+
+.header__searchIcon {
+  background-color: #cd9042;
+  padding: 5px;
+  height: 22px !important;
+  cursor: pointer;
+}
+
+.header__nav {
+  display: flex;
+  justify-content: space-evenly;
+}
+
+.header__option {
+  display: flex;
+  flex-direction: column;
+  margin-left: 10px;
+  margin-right: 10px;
+}
+
+.header__link {
+  color: white;
+  text-decoration: none;
+}
+
+.header__option__lineOne {
+  font-size: 10px;
+}
+.header__option__lineTwo {
+  font-size: 13px;
+  font-weight: 800;
+}
+
+.header__optionBasket {
+  display: flex;
+  align-items: center;
+}
+
+.header__basketCount {
+  margin-left: 10px;
+  margin-right: 10px;
 }
